[gd_scene load_steps=4 format=3 uid="uid://dl1053iw2ne6m"]

[ext_resource type="Script" path="res://chat.gd" id="1_g3u5f"]
[ext_resource type="Texture2D" uid="uid://bxmpmq3ik4t0j" path="res://chat_icon.png" id="2_0v81v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ygv4m"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.235294, 0.372549, 0.509804, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.388235, 0.388235, 0.388235, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="ChatPanel" type="PanelContainer"]
offset_right = 106.0
offset_bottom = 110.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ygv4m")
script = ExtResource("1_g3u5f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_0v81v")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Chat"

[node name="ConnectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Connect"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Messages" type="TextEdit" parent="VBoxContainer/Panel"]
layout_mode = 2
text = "You are not connected to Arcadia server.
"
editable = false
wrap_mode = 1

[node name="Input" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Input"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Input/HBoxContainer"]
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "-default"
popup/item_0/id = 0

[node name="CommandText" type="LineEdit" parent="VBoxContainer/Input/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "[-channel] !command message"

[node name="SendMessageButton" type="Button" parent="VBoxContainer/Input/HBoxContainer"]
layout_mode = 2
text = "Send"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="text_submitted" from="VBoxContainer/Input/HBoxContainer/CommandText" to="." method="_on_command_text_text_submitted"]
[connection signal="pressed" from="VBoxContainer/Input/HBoxContainer/SendMessageButton" to="." method="_on_send_message_button_pressed"]
